--- a/hugo.toml
+++ b/hugo.toml
@@ -50,16 +50,16 @@ style = "github-dark"
   icon = "fa-brands fa-github fa-2x"
   weight = 1
   url = "https://github.com/austin-calkins/"
-[[params.social]]
-  name = "Gitlab"
-  icon = "fa-brands fa-gitlab fa-2x"
-  weight = 2
-  url = "https://gitlab.com/johndoe/"
-[[params.social]]
-  name = "Twitter"
-  icon = "fa-brands fa-x-twitter fa-2x"
-  weight = 3
-  url = "https://twitter.com/johndoe/"
+#[[params.social]]
+#  name = "Gitlab"
+#  icon = "fa-brands fa-gitlab fa-2x"
+#  weight = 2
+#  url = "https://gitlab.com/johndoe/"
+#[[params.social]]
+#  name = "Twitter"
+#  icon = "fa-brands fa-x-twitter fa-2x"
+#  weight = 3
+#  url = "https://twitter.com/johndoe/"
 
 # Menu links
 [[menu.main]]
