--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,6 +1,12 @@
 name: HUGO CI
 
 on:
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag for docker image'
+        required: true
+        default: 'latest'
   push:
     branches: [ "main" ]
   pull_request:
@@ -23,4 +29,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: serdyn321/personal-site
+          tags: serdyn321/personal-site:${{github.event.inputs.tag}}
