--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -29,4 +29,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: serdyn321/personal-site:${{github.event.inputs.tag}}
+          tags: serdyn321/personal-site:${{github.event.inputs.tag || 'latest' }}
